<resources>
    <string name="app_name">Clean Practice</string>
    <string name="ok">OK</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_latest">Latest</string>
    <string name="text_now_playing">Now Playing</string>
    <string name="text_popular">Popular</string>
    <string name="text_top_rated">Top Rated</string>
    <string name="text_upcoming">Upcoming</string>
</resources>
